--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview":"vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "vite preview --host 0.0.0.0 --port 8080"
   },
   "dependencies": {
     "clsx": "^2.1.0",
